@@ -3,8 +3,9 @@ apt (0.8.16~exp12+nmu1) experimental; urgency=low
   [ David Kalnischkies ]
   * apt-pkg/deb/dpkgpm.cc:
     - chroot if needed before dpkg --assert-multi-arch
+    - ensure that dpkg binary doesn't have the chroot-directory prefixed
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 29 Jan 2012 12:58:24 +0100
+ -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 29 Jan 2012 13:08:58 +0100
 
 apt (0.8.16~exp12) experimental; urgency=low
 
